# xsens-mvn

./: CMakeLists.txt  hello
cmake/: FindXsensXME.cmake
include/: XsensMVN.h  XsensMVNPrivate.h
src/: XsensMVN.cpp  XsensMVNPrivate.cpp
